frontend/src/components/Main/Card/Card.css
.card{
    position: relative;
    width: 90vw;
    min-height: 250px;
    background: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    transition: all 0.2s;
    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.16);
}

.card + .card{
    margin-top: 1rem;
}

.card .info{
    position: relative;
    height: 40px;
    width: 100%;
    border-bottom: 1px solid #eee;
    display: flex;
    align-items: center;
    padding-left: 3rem;
}

.card .info .who{
    font-size: 1rem;
    font-weight: 600;
}

.card .info .time{
    margin-left: 2rem;
}

.card .info .remove{
    position: absolute;
    right: 15%;
    background: #f783ac;
    width: 5rem;
    height: 30px;
    border: 1px solid #eee;
    color: white;
    font-weight: 700;
    font-size: 1rem;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.card .main{
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-grow: 3;
    width: 100%;
    border-bottom: 1px solid #eee;
    font-size: 1rem;
    padding: 20px;
}

.card .main .qs{
    width: 90%;
    min-height: 40px;
}

.card .main .aw{
    min-width: 90%;
    max-width: 90%;
    padding: 2vw;
    min-height: 50px;
    margin-top: 20px;
    background: #f1f3f5;
    border: 1px solid #eee;
    border-radius: 5px;
}

.card .main .awCon{
    display: flex;
    width: 90%;
}

.card .main .awCon .awI{
    position: relative;
    flex-grow: 9;
    padding: 2vw;
    font-size: 1rem;
    height: 80px;
    background: #f1f3f5;
    border: 1px solid #eee;
    border-radius: 5px;
    resize: none;
}

.card .main .awCon .count{
    position: absolute;
    font-size: 1rem;
    bottom: 70px;
    right: 40vw;
    color: gray;
}

.card .main .awCon .submit{
    flex-grow: 9;
    padding: 2vw;
    height: 80px;
    cursor: pointer;
    background: #8ce99a;
    border: 1px solid #eee;
    border-radius: 10px;
    font-size: 1rem;
    font-weight: bolder;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 4%;
}

.card .main .awCon .submit:hover{
    filter: brightness(105%);
}
.card .main .awCon .submit:active{
    filter: brightness(95%);
}


.card .add{
    height: 40px;
    width: 100%;
    display: flex;
    align-items: center;
    padding-left: 3rem;
}

.card .add .amount{
    margin-bottom: 3px;
    margin-left: 0.5rem;
}

@media (max-width: 800px){
    .card .main .awCon .count{
        position: absolute;
        font-size: 1rem;
        right: 30vw;
        bottom: 60px;
    }
}

